--- a/app/style.css
+++ b/app/style.css
@@ -4,7 +4,6 @@
 }
 body{
     font-family: "Poppins", sans-serif;
-    background-color:#f4f6ff;
     font-size: 14px;
     font-weight: 500;
 }
@@ -13,18 +12,14 @@ body{
     font-weight: 700;
     color: #000;
 }
-.course-wrap{
-   
-    padding: 10px;
-    background-color:white;
-    border-radius: 10px;
-    width: 95%;
-}
+
 .cover{
-    padding: 25px;
+  margin:10px 20px 10px 10px;
+    padding:25px;
     background-color:#f4f6ff;
     width: 500px;
     border-radius: 10px;
+  
 }
 .course{
     display: flex;
@@ -204,4 +199,125 @@ body{
 .end{
     display: grid;
     grid-template-columns: 1fr 1fr;
+}
+.back-img,
+.notification-img {
+  width: 50px;
+  height: 50px;
+}
+.top-learning {
+  padding: 50px 30px;
+  display: flex;
+  justify-content: space-between;
+}
+.student {
+  color: #0068ff;
+}
+.profile {
+  justify-content: right;
+  display: flex;
+}
+.right-side {
+}
+.learn-background {
+  color: #a2a9c8;
+  padding-left: 35px;
+}
+.learning-icon {
+  width: 50px;
+  height: 50px;
+  padding-left: 35px;
+}
+.percent {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.learning-text span {
+  color: #a2a9c8;
+}
+.learning-text {
+  padding: 30px;
+  padding-right: 220px;
+}
+.progress-bar-target {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: radial-gradient(closest-side, white 79%, transparent 80% 100%),
+    conic-gradient(#ed7071 53%, white 0);
+  margin-right: 46px;
+}
+.progress-bar-target::before {
+  content: "53%";
+}
+.complete-web {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 0px;
+}
+.progress-bar-web {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: radial-gradient(closest-side, white 79%, transparent 80% 100%),
+    conic-gradient(#0068ff 75%, white 0);
+  margin-right: 46px;
+}
+.progress-bar-web::before {
+  content: "75%";
+}
+.progress-bar-grow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: radial-gradient(closest-side, white 79%, transparent 80% 100%),
+    conic-gradient(#cf74ff 14%, white 0);
+  margin-right: 46px;
+}
+.progress-bar-grow::before {
+  content: "14%";
+}
+.grow-community {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 0px;
+}
+.planning {
+  display: flex;
+  color: #a2a9c8;
+  padding-left: 40px;
+}
+.planning .left-arrow {
+  padding-left: 30px;
+  border-radius: 20px;
+}
+.planning .right-arrow {
+  padding: 0px 0px;
+}
+.cal {
+  padding: 20px 40px;
+  color: #a2a9c8;
+  display: flex;
+  justify-content: space-between;
+}
+span {
+  display: flex;
+  justify-content: space-around;
+}
+@media (max-width: 480px) {
+  .total-div {
+    grid-template-columns: 1fr;
+  }
 }
